# ChangeLog for dev-lang/php
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.430 2010/10/31 09:26:32 olemarkus Exp $

  31 Oct 2010; <olemarkus@gentoo.org> files/eblits/pkg_postinst-v2.eblit:
  Fixed a QA issue related to nonexisting SAPIs

  30 Oct 2010; <olemarkus@gentoo.org> files/eblits/pkg_postinst-v2.eblit,
  php-5.2.14-r1.ebuild, files/eblits/src_install-v2.eblit,
  php-5.3.3-r2.ebuild:
  Changed ebuild to use php.ini-development by default
  Also made ebuilds add symlink to php-cgi if the cgi SAPI is installed

  27 Oct 2010; <olemarkus@gentoo.org> files/eblits/src_install-v1.eblit,
  files/eblits/src_install-v2.eblit:
  Corrected typo in the src_install eblit (#342769)

  24 Oct 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_install-v2.eblit:
  install apache module config file into standard directory

  24 Oct 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_configure-v1.eblit, files/eblits/src_configure-v2.eblit:
  enable pdo-sqlite via USE="sqlite3" not USE="sqlite"

  21 Oct 2010; <olemarkus@gentoo.org> files/eblits/pkg_postinst-v1.eblit:
  Added an additional warning about extension_dir to pkg_postinst

  20 Oct 2010; Markos Chandras <hwoarang@gentoo.org> php-5.3.3-r1.ebuild:
  Stable on amd64 wrt bug #336869

  19 Oct 2010; <olemarkus@gentoo.org> -php-5.2.13.ebuild:
  Removing old version

  19 Oct 2010; <olemarkus@gentoo.org> files/eblits/src_install-v2.eblit,
  +files/php-fpm-r1.init:
  Added new fpm.init script that works with minor version slotting

  17 Oct 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_install-v1.eblit, files/eblits/src_install-v2.eblit:
  change allow_url_fopen back to Off (bug #332763)

  14 Oct 2010; Christian Faulhammer <fauli@gentoo.org> php-5.3.3-r1.ebuild:
  x86 stable, bug 336869

*php-5.3.3-r2 (06 Oct 2010)
*php-5.2.14-r1 (06 Oct 2010)

  06 Oct 2010; <olemarkus@gentoo.org> +php-5.2.14-r1.ebuild,