@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/files/eblits/Attic/src_configure-v2.eblit,v 1.2 2010/10/24 11:48:42 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/files/eblits/Attic/src_configure-v2.eblit,v 1.3 2010/10/31 17:24:34 mabi Exp $
 
 eblit-php-src_configure() {
 	PHP_DESTDIR="/usr/$(get_libdir)/php${SLOT}"
@@ -60,7 +60,7 @@ eblit-php-src_configure() {
 	phpconfutils_extension_enable  "soap"         "soap"             1
 	phpconfutils_extension_enable  "sockets"      "sockets"          1
 	phpconfutils_extension_without "sqlite3"      "sqlite3"          1 "/usr"
-	phpconfutils_extension_with    "sybase-ct"    "sybase-ct"        1
+	phpconfutils_extension_with    "sybase-ct"    "sybase-ct"        1 "/usr"
 	phpconfutils_extension_enable  "sysvmsg"      "sysvipc"          1
 	phpconfutils_extension_enable  "sysvsem"      "sysvipc"          1
 	phpconfutils_extension_enable  "sysvshm"      "sysvipc"          1
